// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsComponent Check it renders when not loaded 1`] = `
<Layout
  breadcrumb={
    <Breadcrumb
      allActive={true}
      node={undefined}
      onClickCrumb={[Function]}
    />
  }
  content={
    <span>
      loader
    </span>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <ObservationControlComponent
        id="1"
        onClickNewControl={[Function]}
        onClickNewObservation={[Function]}
      />
    </div>
  }
  title="Magasin"
  toolbar={
    <Toolbar
      clickShowCenter={[Function]}
      clickShowLeft={[Function]}
      hideRight={true}
      labelCenter="Kontroller"
      labelLeft="Observasjoner"
      placeHolderSearch="Filtrer i listen"
      showCenter={true}
      showLeft={true}
    />
  }
/>
`;

exports[`EventsComponent Check it renders. 1`] = `
<Layout
  breadcrumb={
    <Breadcrumb
      allActive={true}
      node={undefined}
      onClickCrumb={[Function]}
    />
  }
  content={
    <div
      style={
        Object {
          "color": "grey",
          "textAlign": "center",
        }
      }
    >
      Ingen kontroller eller observasjoner
    </div>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <ObservationControlComponent
        id="1"
        onClickNewControl={[Function]}
        onClickNewObservation={[Function]}
      />
    </div>
  }
  title="Magasin"
  toolbar={
    <Toolbar
      clickShowCenter={[Function]}
      clickShowLeft={[Function]}
      hideRight={true}
      labelCenter="Kontroller"
      labelLeft="Observasjoner"
      placeHolderSearch="Filtrer i listen"
      showCenter={true}
      showLeft={true}
    />
  }
/>
`;
